syntax = "proto3";

package OrderService;

service Order {
    rpc PlaceOrder(OrderRequest) returns (OrderReply);
    rpc GetOrder(OrderQuery) returns (OrderReply);
    rpc GetOrdersByUser(UserQuery) returns (OrdersReply);
}

message OrderRequest {
    int32 productId = 1;
    int32 quantity = 2;
    string userId = 3;
}

message OrderQuery {
    int32 orderId = 1;
}

message UserQuery {
    string userId = 1;
}

message OrderReply {
    int32 id = 1;
    int32 productId = 2;
    int32 quantity = 3;
    string userId = 4;
}

message OrdersReply {
    repeated OrderReply orders = 1;
}